agregando puntaje aldu y mi discord

--- a/suika/index.html
+++ b/suika/index.html
@@ -269,6 +269,8 @@ body {
         <p>- El que mayor cantidad de puntos haga, se va a ganar 5 subs</p>
         <p>‎ </p>
         <p>- La tabla de posiciones no se modifica sola, la tengo que modificar a mano, asi que si ven que el puntaje de ustedes es mayor que alguno de la tabla y no se modifica no se preocupen.</p>
+        <p>‎ </p>
+        <p>- Mi discord para los clips: dantesitoo / id: 326820001879162880</p>
       </div>
     </div>
       <button id="btn-instrucciones" class="button-top-link">
