agregando fecha limite torneo

--- a/suika/index.html
+++ b/suika/index.html
@@ -266,7 +266,7 @@ body {
         <p>‎ </p>
         <p>- Si queres competir contra otros streamers tenes que hacer el mayor puntaje posible y alguien del chat que haga el clip y me lo mande por susurro o algun lado asi yo lo verifico.</p>
         <p>‎ </p>
-        <p>- El que mayor cantidad de puntos haga, se va a ganar 5 subs</p>
+        <p>- El que mayor cantidad de puntos haga se va a ganar 5 subs. TORNEO DESDE 30/9 AL 7/10 (El juego sigue para siempre, solo el torneo es 1 semana.)</p>
         <p>‎ </p>
         <p>- La tabla de posiciones no se modifica sola, la tengo que modificar a mano, asi que si ven que el puntaje de ustedes es mayor que alguno de la tabla y no se modifica no se preocupen.</p>
         <p>‎ </p>
