--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -197,12 +197,18 @@
                             </tr>
                             <tr>
                                 <td>4</td>
+                                <td><a href="https://www.twitch.tv/thiago_gj">Thiago GJ</a></td>
+                                <td>3184</td>
+                                <td><a href="https://www.twitch.tv/thiago_gj/clip/DepressedPatientOxCclamChamp-7CReTTwzWZAJ13yA">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
                                 <td><a href="https://www.twitch.tv/aldimirco">Aldimirco</a></td>
                                 <td>3098</td>
                                 <td><a href="https://www.twitch.tv/aldimirco/clip/DeadDeterminedMarrowKappaPride-5BAE6Lq-cpmqaiwm">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td><a href="https://www.twitch.tv/harryalexok">HarryAlexOk</a></td>
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
