agregando gente a top viewers

--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -183,8 +183,18 @@
                             </tr>
                             <tr>
                                 <td>2</td>
+                                <td>KILLER AUGUSTO TERCERO</td>
+                                <td>3535</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
                                 <td>Alangoro</td>
                                 <td>3304</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Nawell</td>
+                                <td>2632</td> 
                             </tr>
                     </tbody>
                 </table>
