--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -213,6 +213,12 @@
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
                             </tr>
+                            <tr>
+                                <td>7</td>
+                                <td><a href="https://www.twitch.tv/taffitaa">Taffita</a></td>
+                                <td>2614</td>
+                                <td><a href="https://www.twitch.tv/taffitaa/clip/TriumphantBlatantSnakeLeeroyJenkins-Js05H5PGwtHN2nb2">Clip</a></td>
+                            </tr>   
                     </tbody>
                 </table>
             </div>
