añadiendo la instruccion de sin limite de intentos

--- a/suika/index.html
+++ b/suika/index.html
@@ -277,6 +277,8 @@ body {
         <p>‎ </p>
         <p>- Para el TOP de competencia solo cuentan los puntos validados por CLIP.</p>
         <p>‎ </p>
+        <p>- NO HAY LIMITE DE INTENTOS</p>
+        <p>‎ </p>
         <p>- Para el TOP de viewers me mandan una foto y yo los agrego. (no mientan)</p>
         <p>‎ </p>
         <p>- La tabla de posiciones no se modifica sola, la tengo que modificar a mano, asi que si ven que el puntaje de ustedes es mayor que alguno de la tabla y no se modifica no se preocupen.</p>
