--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -179,42 +179,48 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
+                                <td><a href="https://www.twitch.tv/delfibalva">Delfibalva</a></td>
+                                <td>3949</td>
+                                <td><a href="https://www.twitch.tv/delfibalva/clip/LitigiousPricklySoymilkPeanutButterJellyTime-ixkmGUnGEj0U2NEr">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
                                 <td><a href="https://www.twitch.tv/tongx_">Tonga</a></td>
                                 <td>3701</td>
                                 <td><a href="https://www.twitch.tv/tongx_/clip/CourageousRealFriesLitty-R30fnVUl84vDtH72">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>2</td>
+                                <td>3</td>
                                 <td><a href="https://www.twitch.tv/meelooh">Meloh</a></td>
                                 <td>3677</td>
                                 <td><a href="https://www.twitch.tv/meelooh/clip/BitterGorgeousEndivePeteZaroll-YlEIo7Y1geiTwpyI">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>3</td>
+                                <td>4</td>
                                 <td><a href="https://www.twitch.tv/taffitaa">Taffita</a></td>
                                 <td>3534</td>
                                 <td><a href="https://www.twitch.tv/taffitaa/clip/FrigidSweetChamoisEagleEye-lDPjmqL8gdUHDmQf">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>5</td>
                                 <td><a href="https://www.twitch.tv/chabon">Chabon</a></td>
                                 <td>3348</td>
                                 <td><a href="https://www.twitch.tv/chabon/clip/SucculentSplendidUdonDxCat-tUwiNlt1pk9Az74I">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td><a href="https://www.twitch.tv/thiago_gj">Thiago GJ</a></td>
                                 <td>3192</td>
                                 <td><a href="https://www.twitch.tv/thiago_gj/clip/PeppyGleamingDootBuddhaBar-6ifx94yWlgUHggWo">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
                                 <td><a href="https://www.twitch.tv/aldimirco">Aldimirco</a></td>
                                 <td>3098</td>
                                 <td><a href="https://www.twitch.tv/aldimirco/clip/DeadDeterminedMarrowKappaPride-5BAE6Lq-cpmqaiwm">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>8</td>
                                 <td><a href="https://www.twitch.tv/harryalexok">HarryAlexOk</a></td>
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
