--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -181,33 +181,38 @@
                                 <td>Guadatuna</td>
                                 <td>4275</td>
                             </tr>
-                            <tr>
+                            <tr></tr>
                                 <td>2</td>
+                                <td>Johxz</td>
+                                <td>4128</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
                                 <td>Gonzitax</td>
                                 <td>3786</td>
                             </tr>
                             <tr>
-                                <td>3</td>
+                                <td>4</td>
                                 <td>Ardiancho</td>
                                 <td>3645</td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>5</td>
                                 <td>KILLER AUGUSTO TERCERO</td>
                                 <td>3535</td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td>Blito</td>
                                 <td>3419</td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
                                 <td>Alangoro</td>
                                 <td>3304</td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>8</td>
                                 <td>Nawell</td>
                                 <td>2632</td> 
                             </tr>
