agregando viewers tabla suika

--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -178,13 +178,13 @@
                         <tbody>
                             <tr></tr>
                                 <td>1</td>
-                                <td>Guadatuna</td>
-                                <td>4275</td>
+                                <td>Johxz</td>
+                                <td>4309</td>
                             </tr>
                             <tr></tr>
                                 <td>2</td>
-                                <td>Johxz</td>
-                                <td>4128</td>
+                                <td>Guadatuna</td>
+                                <td>4275</td>
                             </tr>
                             <tr>
                                 <td>3</td>
@@ -198,21 +198,26 @@
                             </tr>
                             <tr>
                                 <td>5</td>
+                                <td>drajaz</td>
+                                <td>3550</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
                                 <td>KILLER AUGUSTO TERCERO</td>
                                 <td>3535</td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
                                 <td>Blito</td>
                                 <td>3419</td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>8</td>
                                 <td>Alangoro</td>
                                 <td>3304</td>
                             </tr>
                             <tr>
-                                <td>8</td>
+                                <td>9</td>
                                 <td>Nawell</td>
                                 <td>2632</td> 
                             </tr>
