agregando viewers tabla suika

--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -216,8 +216,13 @@
                                 <td>Alangoro</td>
                                 <td>3304</td>
                             </tr>
-                            <tr>
+                            <tr></tr>
                                 <td>9</td>
+                                <td>Valentinascz</td>
+                                <td>2718</td> 
+                            </tr>
+                            <tr>
+                                <td>10</td>
                                 <td>Nawell</td>
                                 <td>2632</td> 
                             </tr>
