--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -221,10 +221,17 @@
                             </tr>
                             <tr>
                                 <td>8</td>
+                                <td><a href="https://www.twitch.tv/julianpz7">Julianpz7</a></td>
+                                <td>3098</td>
+                                <td><a href="https://www.twitch.tv/julianpz7/clip/SleepyMoistGrassCoolStoryBob-foNXnhp2tXn42gM2">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
                                 <td><a href="https://www.twitch.tv/harryalexok">HarryAlexOk</a></td>
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
                             </tr>
+                            
                     </tbody>
                 </table>
             </div>
