--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -176,63 +176,68 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr></tr>
+                            <tr>
                                 <td>1</td>
                                 <td>Johxz</td>
                                 <td>4309</td>
                             </tr>
-                            <tr></tr>
+                            <tr>
                                 <td>2</td>
                                 <td>Guadatuna</td>
                                 <td>4275</td>
                             </tr>
                             <tr>
                                 <td>3</td>
+                                <td>Makakitox</td>
+                                <td>4246</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
                                 <td>Gonzitax</td>
                                 <td>3786</td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>5</td>
                                 <td>Lolardou</td>
                                 <td>3751</td> 
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td>Leoncito</td>
                                 <td>3718</td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
+                                <td>Valentinascz</td>
+                                <td>3663</td> 
+                            </tr>
+                            <tr>
+                                <td>8</td>
                                 <td>Ardiancho</td>
                                 <td>3645</td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>9</td>
                                 <td>drajaz</td>
                                 <td>3550</td>
                             </tr>
                             <tr>
-                                <td>8</td>
+                                <td>10</td>
                                 <td>KILLER AUGUSTO TERCERO</td>
                                 <td>3535</td>
                             </tr>
                             <tr>
-                                <td>9</td>
+                                <td>11</td>
+                                <td>Alangoro</td>
+                                <td>3422</td>
+                            </tr>
+                            <tr>
+                                <td>12</td>
                                 <td>Blito</td>
                                 <td>3419</td>
                             </tr>
                             <tr>
-                                <td>10</td>
-                                <td>Alangoro</td>
-                                <td>3304</td>
-                            </tr>
-                            <tr></tr>
-                                <td>11</td>
-                                <td>Valentinascz</td>
-                                <td>2718</td> 
-                            </tr>
-                            <tr>
-                                <td>12</td>
+                                <td>13</td>
                                 <td>Nawell</td>
                                 <td>2632</td> 
                             </tr>
