arreglando resolucion celulares

--- a/suika/index.html
+++ b/suika/index.html
@@ -241,6 +241,20 @@ body {
   height: auto;
 }
 
+@media only screen and (max-width: 768px) {
+  /* Ocultar botones e imágenes fuera del juego */
+  #btn-instrucciones,
+  #btn-competition,
+  #bg-guia-container,
+  #bg-podio-container,
+  .button-top-left,
+  .button-competition,
+  .button-top-link,
+  .button-top-viewers-link {
+    display: none;
+  }
+}
+
   </style>
 </head>
 <body>
