--- a/suika/topViewers/index.html
+++ b/suika/topViewers/index.html
@@ -178,53 +178,53 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
+                                <td>Leoncito</td>
+                                <td>7260</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
                                 <td>drajaz</td>
                                 <td>6706</td>
                             </tr>
                             <tr>
-                                <td>2</td>
+                                <td>3</td>
                                 <td>Johxz</td>
                                 <td>4309</td>
                             </tr>
                             <tr>
-                                <td>3</td>
+                                <td>4</td>
                                 <td>Guadatuna</td>
                                 <td>4275</td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>5</td>
                                 <td>Pocc0yo</td>
                                 <td>4065</td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
+                                <td>KILLER AUGUSTO TERCERO</td>
+                                <td>3841</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
                                 <td>Gonzitax</td>
                                 <td>3786</td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>8</td>
                                 <td>Lolardou</td>
                                 <td>3751</td> 
                             </tr>
                             <tr>
-                                <td>7</td>
-                                <td>Leoncito</td>
-                                <td>3718</td>
-                            </tr>
-                            <tr>
-                                <td>8</td>
+                                <td>9</td>
                                 <td>Valentinascz</td>
                                 <td>3663</td> 
                             </tr>
                             <tr>
-                                <td>9</td>
+                                <td>10</td>
                                 <td>Ardiancho</td>
                                 <td>3645</td>
-                            </tr>
-                            <tr>
-                                <td>10</td>
-                                <td>KILLER AUGUSTO TERCERO</td>
-                                <td>3535</td>
                             </tr>
                             <tr>
                                 <td>11</td>
@@ -238,6 +238,11 @@
                             </tr>
                             <tr>
                                 <td>13</td>
+                                <td>Juan</td>
+                                <td>2731</td> 
+                            </tr>
+                            <tr>
+                                <td>14</td>
                                 <td>Nawell</td>
                                 <td>2632</td> 
                             </tr>
