--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -197,21 +197,21 @@
                             </tr>
                             <tr>
                                 <td>4</td>
-                                <td><a href="https://www.twitch.tv/meelooh">Meloh</a></td>
+                                <td><a href="https://www.twitch.tv/taffitaa">Taffita</a></td>
+                                <td>3832</td>
+                                <td><a href="https://www.twitch.tv/taffitaa/clip/SpotlessGlutenFreeAntelopeSSSsss-Fy_fRW8v4IVhz0YS">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td><a href="https://www.twitch.tv/meelooh">Meelooh</a></td>
                                 <td>3808</td>
                                 <td><a href="https://www.twitch.tv/meelooh/clip/FastCorrectWalrusM4xHeh-JSYNYvGexb6-3uaL">Clip</a></td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td><a href="https://www.twitch.tv/tongx_">Tonga</a></td>
                                 <td>3701</td>
                                 <td><a href="https://www.twitch.tv/tongx_/clip/CourageousRealFriesLitty-R30fnVUl84vDtH72">Clip</a></td>
-                            </tr>
-                            <tr>
-                                <td>6</td>
-                                <td><a href="https://www.twitch.tv/taffitaa">Taffita</a></td>
-                                <td>3534</td>
-                                <td><a href="https://www.twitch.tv/taffitaa/clip/FrigidSweetChamoisEagleEye-lDPjmqL8gdUHDmQf">Clip</a></td>
                             </tr>
                             <tr>
                                 <td>7</td>
