--- a/pasapalabra/index.html
+++ b/pasapalabra/index.html
@@ -48,7 +48,11 @@
         </div>
     </div>
 
-    
+    <!-- Scripts de Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+    <!-- Script del juego -->
     <script src="script.js"></script>
 </body>
 </html>
