--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <div id="emote-container"></div>
+    <h1>Twitchdle</h1>
     <div class="container">
-        <h1>Twitchdle</h1>
         <div id="board"></div>
         <div id="keyboard"></div>
         <div id="message" class="hidden"></div>
