Agregando CSS y dandole mas forma

--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -6,6 +6,7 @@
     <title>Twitchdle</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="emote-container"></div>
@@ -20,7 +21,7 @@
         <h2>¡Ya jugaste!</h2>
         <div id="postGameMessage"></div>
         <div id="postGameCountdown"></div>
-        <!-- Aquí puedes agregar botones y estadísticas más adelante -->
+        <div id="postGameStats"></div>
         <div class="social-buttons">
             <a href="https://github.com/daantesiito" target="_blank" class="social-button github"><i class="fab fa-github"></i></a>
             <a href="https://cafecito.app/dantesiito" target="_blank" class="social-button cafecito"><i class="fas fa-coffee"></i></a>
@@ -35,7 +36,7 @@
             <p id="modalMessage"></p>
             <p id="modalCountdown"></p>
         </div>
-    </div>    
+    </div>  
     <script src="script.js"></script>
 </body>
 </html>
