Agregando log in de twitch

--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -11,7 +11,12 @@
 <body>
     <div id="emote-container"></div>
     <h1>Twitchdle</h1>
-    <div class="container">
+    <div id="userInfo" class="hidden">
+        <img id="userAvatar" src="" alt="User Avatar" />
+        <span id="userName"></span>
+    </div>
+    <button id="loginWithTwitchButton">LOGIN CON TWITCH</button>
+    <div class="container hidden">
         <div id="board"></div>
         <div id="keyboard"></div>
         <div id="message" class="hidden"></div>
