--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -42,6 +42,11 @@
             <p id="modalCountdown"></p>
         </div>
     </div>  
+
+    <!-- Scripts de Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
