--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitchdle</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="emote-container"></div>
@@ -32,6 +33,7 @@
             <a href="https://cafecito.app/dantesiito" target="_blank" class="social-button cafecito"><i class="fas fa-coffee"></i></a>
             <a href="https://www.instagram.com/dante_puddu/" target="_blank" class="social-button instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://www.twitch.tv/daantesiito" target="_blank" class="social-button twitch"><i class="fab fa-twitch"></i></a>
+            <a href="https://discordapp.com/users/326820001879162880" target="_blank" class="social-button discord"><i class="fab fa-discord"></i></a>
             <a href="mailto:adantepuddu@gmail.com" class="social-button email"><i class="fas fa-envelope"></i></a>
         </div>
     </div>
@@ -47,6 +49,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
