agregando fotos amarillo y gris

--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -50,12 +50,12 @@
                 <p>
                     <span style="color: var(--col-present); font-weight: bold;">AMARILLO</span> 
                     significa que la letra está presente en la palabra pero en la posición INCORRECTA 
-                    <img src="images/yellow_letter.png" alt="Letra amarilla" class="instruction-icon">
+                    <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/twitchdle/media/AMARILLO.png?raw=true" alt="Letra amarilla" class="instruction-icon">
                 </p>
                 <p>
                     <span style="color: var(--col-absent); font-weight: bold;">GRIS</span> 
                     significa que la letra NO está presente en la palabra 
-                    <img src="images/gray_letter.png" alt="Letra gris" class="instruction-icon">
+                    <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/twitchdle/media/GRIS.png?raw=true" alt="Letra gris" class="instruction-icon">
                 </p>
                 <p> 
                     El login con twitch solo guarda tu nombre de usuario para poder usarlo como "cuenta" y que no se repita.
