--- a/twitchdle/index.html
+++ b/twitchdle/index.html
@@ -40,6 +40,9 @@
                     El objetivo del juego es simple, adivinar la palabra oculta. La palabra puede tener entre 3 y 7 letras y tenes 6 intentos para adivinarla.
                 </p>
                 <p> 
+                    La tematica es de twitch/kick o el ambiente del streaming en si. La palabra puede ser un streamer u otra cosa relacionada con el stream.
+                </p>
+                <p> 
                     La palabra es la misma para todas las personas en ese día. Cada intento debe ser una palabra válida. En cada ronda, el juego 
                     pinta cada letra de un color indicando si esa letra se encuentra o no en la palabra y si está en la posición correcta.
                 </p>
@@ -59,7 +62,13 @@
                     <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/twitchdle/media/GRIS.png?raw=true" alt="Letra gris" class="instruction-icon">
                 </p>
                 <p> 
+                    Cualquier aporte de palabra para adivinar o si intentaste alguna palabra que pensas que tiene que estar en el diccionario para validarse, mandamela por discord: 326820001879162880
+                </p>
+                <p> 
                     El login con twitch solo guarda tu nombre de usuario para poder usarlo como "cuenta" y que no se repita.
+                </p>
+                <p> 
+                    Nota: El juego esta hecho pensado especialmente para jugarlo en PC. Si estas del celu puede que sea complicado jugar.
                 </p>
             </div>
         </div>
